# mcp

./: README.md  pyproject.toml  repository.yaml
mcp_reporter/: Dockerfile  config.yaml
mcp_reporter/app/: README.md  pyproject.toml
mcp_reporter/app/src/mcp_reporter_server/: server.py
mcp_reporter/rootfs/etc/services.d/mcp-report/: run
mcp_reporter/translations/: en.yaml
src/mcp_reporter_server/: server.py
